data/all_generated_tests/raw_wast_tests/nop_IncorrectHandlingofControlFlowAcrossModuleBoundaries_868.wast
;; 9. **Test: Cross-Module Nop Between Control Flow Branches**    - Set up Module A to export a function containing branches with each branch starting or ending with `nop`. Module B imports and tests this function for accurate branch execution and stack state.    - **Constraint Check**: Verifies `nop` does not disturb correct branching control flow across module boundaries.    - **Relation to Differential Handling**: Incorrect branching influenced by initialization problems in wizard_engine.

(assert_invalid
  (module
    (func $cross-module-nop (result i32)
      (block
        (nop)
        (br 0)
      )
      (nop)
    )
    (export "test_func" (func $cross-module-nop))
  )
  "type mismatch"
)